--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "reset-css": "~2.0.20110126",
     "semantic-ui": "~0.13.0",
     "jquery.easing": "~1.3.1",
-    "modernizr": "~2.8.3"
+    "modernizr": "~2.8.3",
+    "ihover": "~1.0.0"
   },
   "overrides": {
     "google-code-prettify": {
