--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "NCKU-graduation104",
   "dependencies": {
     "jsonfile": "~2.0.0",
-    "util": "~0.10.3"
+    "util": "~0.10.3",
+    "body-parser": "~1.9.2"
   },
   "devDependencies": {
     "bower": "~1.3.8",
