--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "semantic-ui": "~0.13.0",
     "jquery.easing": "~1.3.1",
     "modernizr": "~2.8.3",
-    "ihover": "~1.0.0"
+    "ihover": "~1.0.0",
+    "jquery-color": "~2.1.2"
   },
   "overrides": {
     "google-code-prettify": {
@@ -22,6 +23,9 @@
     },
     "semantic-ui": {
       "main": "build/packaged/**/*"
+    },
+    "jquery-color": {
+      "main": "jquery.color.js"
     }
   },
   "version": "0.0.1"
