--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "jquery.easing": "~1.3.1",
     "modernizr": "~2.8.3",
     "ihover": "~1.0.0",
-    "jquery-color": "~2.1.2"
+    "jquery-color": "~2.1.2",
+    "jquery.imgpreload": "~1.6.2"
   },
   "overrides": {
     "google-code-prettify": {
@@ -26,6 +27,9 @@
     },
     "jquery-color": {
       "main": "jquery.color.js"
+    },
+    "jquery.imgpreload": {
+      "main": "jquery.imgpreload.min.js"
     }
   },
   "version": "0.0.1"
