--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "author": "Mouther",
   "description": "NCKU-graduation104",
   "dependencies": {
+    "body-parser": "~1.9.2",
     "jsonfile": "~2.0.0",
-    "util": "~0.10.3",
-    "body-parser": "~1.9.2"
+    "mongoose": "^4.0.1",
+    "util": "~0.10.3"
   },
   "devDependencies": {
     "bower": "~1.3.8",
