--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "body-parser": "~1.9.2",
     "jsonfile": "~2.0.0",
     "mongoose": "^4.0.1",
+    "nodemailer": "^1.3.4",
     "util": "~0.10.3"
   },
   "devDependencies": {
