--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "NCKU-graduation104",
   "dependencies": {
     "body-parser": "~1.9.2",
+    "gulp-uglify": "^1.2.0",
     "jsonfile": "~2.0.0",
     "mongoose": "^4.0.1",
     "nodemailer": "^1.3.4",
